--- a/nginx-static-web/nginx.conf
+++ b/nginx-static-web/nginx.conf
@@ -1,17 +1,22 @@
-user  nginx;
-worker_processes  1;
+user nginx;
 
-error_log  /var/log/nginx/error.log warn;
+worker_processes     1;
+worker_rlimit_nofile 100000;
+
+error_log  /dev/stderr  warn;
 pid        /var/run/nginx.pid;
 
 events {
     worker_connections  1024;
     accept_mutex_delay  100ms;
+    multi_accept on;
+    use epoll;
 }
 
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
+    server_tokens off;
 
     log_format json escape=json '{"time": "$time_iso8601",'
         '"host": "$remote_addr",'
@@ -29,20 +34,29 @@ http {
         '"forwardedfor": "$http_x_forwarded_for",'
         '"forwardedproto": "$http_x_forwarded_proto",'
         '"referrer": "$http_referer"}';
-    access_log  /var/log/nginx/access.log  json;
+    access_log  /dev/stdout  json;
 
-    sendfile           on;
-    tcp_nopush         on;
-    keepalive_timeout  65;
-    open_file_cache    max=100 inactive=20s;
+    sendfile                  on;
+    tcp_nopush                on;
+    keepalive_timeout         30;
+    client_header_timeout     30;
+    client_body_timeout       30;
+    send_timeout              30;
+    reset_timedout_connection on;
+    open_file_cache           max=100 inactive=20s;
 
-    gzip          on;
-    gzip_vary     on;
-    gzip_types  text/plain
+    gzip            on;
+    gzip_vary       on;
+    gzip_min_length 1024;
+    gzip_comp_level 6;
+    gzip_types text/plain
         text/xml
         text/css
         text/javascript
+        application/xml
+        application/xml+rss
         application/javascript
+        application/x-javascript
         application/json
         font/truetype
         font/opentype
@@ -51,22 +65,24 @@ http {
 
     server {
         listen       80;
+        charset      UTF-8;
         server_name  localhost;
+
+        location = /_healthz {
+            return 200 'OK';
+        }
+
+        location /static {
+            root  /usr/share/nginx/html;
+            gzip_static always;
+            gunzip on;
+            expires 30d;
+        }
 
         location / {
             root   /usr/share/nginx/html;
             index  index.html index.htm;
-        }
-
-        location ~* \.(html|txt|xml|css|js|json|ttf|otf|svg|ico)$ {
-            root  /usr/share/nginx/html;
-            gzip_static always;
-            gunzip on;
-        }
-
-        location ~ .*\.(css|js) {
-            root  /usr/share/nginx/html;
-            expires 30d;
+            try_files $uri /index.html;
         }
 
         error_page  404  /404.html;
