Update terraform image

--- a/terraform/Dockerfile
+++ b/terraform/Dockerfile
@@ -1,12 +1,14 @@
-FROM hashicorp/terraform:0.11.11
+FROM hashicorp/terraform:0.12.14
 
-ARG tfnotify_version="v0.3.0"
+ARG tfnotify_version="v0.5.5"
 
-RUN curl -L -O https://github.com/mercari/tfnotify/releases/download/${tfnotify_version}/tfnotify_${tfnotify_version}_linux_amd64.tar.gz \
-  && tar -zxvf ./tfnotify_${tfnotify_version}_linux_amd64.tar.gz \
-	&& rm ./tfnotify_${tfnotify_version}_linux_amd64.tar.gz \
-	&& mv ./tfnotify_${tfnotify_version}_linux_amd64/tfnotify /usr/local/bin \
-	&& rm -r ./tfnotify_${tfnotify_version}_linux_amd64/ \
-  && apk update \
-  && apk add bash \
-  && rm -rf /var/cache/apk/*
+RUN apk update \
+      && apk add bash curl \
+      && rm -rf /var/cache/apk/*
+
+RUN curl -L -O https://github.com/mercari/tfnotify/releases/download/${tfnotify_version}/tfnotify_linux_amd64.tar.gz \
+      && mkdir ./archive \
+      && tar -zxvf ./tfnotify_linux_amd64.tar.gz -C ./archive \
+      && mv ./archive/tfnotify /usr/local/bin \
+      && rm ./tfnotify_linux_amd64.tar.gz \
+      && rm -r ./archive
