--- a/nginx-static-web/nginx.conf
+++ b/nginx-static-web/nginx.conf
@@ -79,10 +79,24 @@ http {
             expires 30d;
         }
 
+        location /robots.txt {
+            root   /usr/share/nginx/html;
+            expires 1d;
+        }
+
+        location /favicon.ico {
+            root   /usr/share/nginx/html;
+            expires 1d;
+        }
+
         location / {
             root   /usr/share/nginx/html;
             index  index.html index.htm;
             try_files $uri /index.html;
+
+            add_header Cache-Control no-cache;
+            etag off;
+            if_modified_since off;
         }
 
         error_page  404  /404.html;
