--- a/nginx-static-web/nginx.conf
+++ b/nginx-static-web/nginx.conf
@@ -89,6 +89,16 @@ http {
             expires 1d;
         }
 
+        location /logo192.png {
+            root   /usr/share/nginx/html;
+            expires 1d;
+        }
+
+        location /logo512.png {
+            root   /usr/share/nginx/html;
+            expires 1d;
+        }
+
         location / {
             root   /usr/share/nginx/html;
             index  index.html index.htm;
